src/app/home/home.component.css
.hero-img {
    width: 50%;
    height: auto;
    border-radius: 50%;
    overflow: hidden;
    margin-top: 0px;
}

.clipped-container {
    clip-path: polygon(0 0, 100% 0, 100% 43%, 0% 100%);
    height: 300px;
    width: 100%;
    position: absolute;
}

.about-container {
    position: relative;
}

.shadow {
    background-color: #fff;
}

.hobby {
    width: 100px;
    height: 100px;
    font-size: 16px;
    background-color: #CD5334;
    color: #fff;
}

/* .skills-container {
    background-color: #CD5334;
} */

#skill-heading {
    font-size: 2.3 !important;
}

.skill {
    font-size: 5rem;
    padding: .6em;
}

.hidden {
    opacity: 1;
}

.fade-in {
    opacity: 1;
    transition: ease-in 1s;

}

.card {
    max-width: 350px;
    max-height: 500px;
    margin: .5em;
}

.img-container {
    overflow: hidden;
}

.card img {
    height: 195px;
}

.card img:hover {
    transform: scale(1.2);
    transition: ease-out .5s;
}

.card-body a {
    margin-bottom: 12px;
    color: #CD5334;
    text-decoration: none;
    transition: ease-in .3s;
}

.card-body a:hover {
    cursor: pointer;
    color: #fff;
    background-color: #CD5334;
}

small {
    color: #CD5334;
}


@media only screen and (min-width: 768px) {
    .hero-img {
        width: 70%;
    }
}

@media only screen and (max-width: 380px) {
    .hero-img {
        width: 100%;
        margin-top: 2.5em;
    }

    .skill {
        font-size: 3rem;
    }
}

